--- a/index.html
+++ b/index.html
@@ -229,20 +229,20 @@
 								  </div>
 
 								<div class="skill-mf">
-									<p class="title-s">Skills</p>
+									<p class="title-s">SKILLS</p>
 									<span>SQL</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>PYTHON</span> <span class="pull-right"></span>
+									<span>Python</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Business Intelligence</span> <span class="pull-right"></span>
+									<span>Business Analytics</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 68%" aria-valuenow="70" aria-valuemin="0"
 											aria-valuemax="100"></div>
